syntax = "proto3";

// A BSON Object ID
// See: https://docs.mongodb.com/manual/reference/method/ObjectId/
message ObjectId {
  // The first four bytes.
  uint32 first_part = 1;

  // The last eight bytes.
  uint64 second_part = 2;
}
